[metadata]
name = dynmap_png
version = 0.1.0
description = Python script for creating .png exports from Minecraft Dynmap maps
url = https://github.com/danae/dynmap-png
author = danae
author_email = info@danaedekker.com
license = GPL-3.0-or-later

[options]
packages = dynmap_png
install_requires =
  pillow >= 8.0
  progressbar2 >= 3.0
  requests >= 2.26

[options.entry_points]
console_scripts =
  dynmap_png = dynmap_png:main
